--- a/MessageMe/Base.lproj/Main.storyboard
+++ b/MessageMe/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12100" systemVersion="16E144f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12072"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainViewController" id="BYZ-38-t0r" customClass="MainViewController" customModule="MessageMe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,112 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="Z4b-zV-Dmc">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cRz-9G-xOR" userLabel="Login Anonymously">
+                                <rect key="frame" x="96" y="252" width="182" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="hMD-MC-oKa"/>
+                                    <constraint firstAttribute="width" constant="182" id="tAL-m3-YDg"/>
+                                </constraints>
+                                <state key="normal" title="LOGIN ANONYMOUSLY">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vtW-IZ-ZNu"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oal-3d-Lvc" userLabel="Google Button">
+                                <rect key="frame" x="167" y="414" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="X4L-CE-s4r"/>
+                                    <constraint firstAttribute="width" constant="40" id="xg9-MF-mtW"/>
+                                </constraints>
+                                <state key="normal" image="googleButton"/>
+                                <connections>
+                                    <action selector="googleButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PkU-M5-ywW"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="OrLine.png" translatesAutoresizingMaskIntoConstraints="NO" id="2Ow-Q9-YL9">
+                                <rect key="frame" x="67" y="347" width="240" height="16"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="16" id="p3H-l3-lZL"/>
+                                    <constraint firstAttribute="width" constant="240" id="rkF-1U-9VX"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Z4b-zV-Dmc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="7tK-9f-gQ8"/>
+                            <constraint firstItem="2Ow-Q9-YL9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BYx-Al-Qf3"/>
+                            <constraint firstItem="cRz-9G-xOR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="E9T-8X-O0g"/>
+                            <constraint firstItem="Z4b-zV-Dmc" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="PPe-hr-dXq"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="oal-3d-Lvc" secondAttribute="bottom" constant="213" id="TIp-o9-ig7"/>
+                            <constraint firstAttribute="trailing" secondItem="Z4b-zV-Dmc" secondAttribute="trailing" id="am2-te-2ke"/>
+                            <constraint firstItem="2Ow-Q9-YL9" firstAttribute="top" secondItem="cRz-9G-xOR" secondAttribute="bottom" constant="65" id="fiY-j7-suY"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Z4b-zV-Dmc" secondAttribute="bottom" id="hKn-T9-Pkl"/>
+                            <constraint firstItem="oal-3d-Lvc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sd0-Qf-rJY"/>
+                            <constraint firstItem="oal-3d-Lvc" firstAttribute="top" secondItem="2Ow-Q9-YL9" secondAttribute="bottom" constant="51" id="vSV-DQ-E66"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Evd-1P-lH3"/>
+                    <connections>
+                        <outlet property="backgroundImage" destination="Z4b-zV-Dmc" id="8sG-eI-F6w"/>
+                        <outlet property="googleButton" destination="oal-3d-Lvc" id="J85-mv-tMm"/>
+                        <outlet property="loginButton" destination="cRz-9G-xOR" id="S9C-4y-xU5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1076" y="138.98050974512745"/>
+        </scene>
+        <!--Message Controller View Controller-->
+        <scene sceneID="Qwr-Aq-cgw">
+            <objects>
+                <viewController storyboardIdentifier="MessageController" id="piH-js-eml" customClass="MessageControllerViewController" customModule="MessageMe" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fDQ-2F-Tcg"/>
+                        <viewControllerLayoutGuide type="bottom" id="xpC-24-0qr"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7Jj-QG-sQL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="33z-Yt-hR1">
+                        <barButtonItem key="leftBarButtonItem" title="LogOut" id="isL-LY-MVV">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IwB-QP-rqn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2508" y="139"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="uis-oy-X2e">
+            <objects>
+                <navigationController storyboardIdentifier="NavigationController" automaticallyAdjustsScrollViewInsets="NO" id="Hdt-TC-lD6" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gfA-xM-3VA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="piH-js-eml" kind="relationship" relationship="rootViewController" id="q0i-s7-VGY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8K0-7n-i4r" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1808.8" y="138.98050974512745"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="OrLine.png" width="864" height="45"/>
+        <image name="backgroundPhoto" width="1125" height="2001"/>
+        <image name="googleButton" width="120" height="120"/>
+    </resources>
 </document>
